Segundo Update, agora pela linha de comando!

--- a/views/index.html
+++ b/views/index.html
@@ -216,7 +216,7 @@ pre {
 
 <section class='container'>
           <hgroup>
-            <h1>Welcome to your Node.js application on OpenShift, provided by Marcelo Baptista</h1>
+            <h1>FALA MARCELO FONSECA!!! Welcome to your Node.js application on OpenShift, provided by Marcelo Baptista</h1>
           </hgroup>
 
 
